--- a/styles/main.css
+++ b/styles/main.css
@@ -56,3 +56,9 @@ textarea {
     max-width: 700px;
     width: 90vw;
 }
+
+@media (min-width: 700px) {
+    :root {
+        font-size: 62.5%; /* todo 1rem será relativo a 10px */
+    }
+}
