--- a/public/styles/partials/forms.css
+++ b/public/styles/partials/forms.css
@@ -44,3 +44,9 @@
   background: var(--color-primary-light);
   position: absolute;
 }
+
+label small {
+  color: var(--color-small-info);
+  font-size: 1.2rem;
+  padding-left: 1.2rem;
+}
