--- a/public/styles/partials/page-study.css
+++ b/public/styles/partials/page-study.css
@@ -107,7 +107,7 @@
     font-size: 1.6rem;
 }
 
-.teacher-item footer button {
+.teacher-item footer .button {
     height: 5.6rem;
     width: 20rem;
     border: 0;
@@ -127,7 +127,7 @@
     justify-content: space-evenly;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer .button:hover {
     background: var(--color-secondary-dark);
 }
 
@@ -169,13 +169,13 @@
         margin-left: 16px;
     }
     
-    .teacher-item footer button {
+    .teacher-item footer .button {
         font-size: 16px;
         justify-content: center;
         width: 245px;
     }
 
-    .teacher-item footer button img {
+    .teacher-item footer .button img {
         margin-right: 16px;
     }
 }
